# twizzin

./: .gitignore  README.md  middleware.ts
.github/workflows/: tests.yml
twizzin-be/: Anchor.toml  package.json
twizzin-be-2/: Anchor.toml  package.json
twizzin-be-2/programs/twizzin-be-2/: Cargo.toml
twizzin-be-2/tests/: claim.ts  closeGame.ts  closePlayerAccount.ts  declareWinners.ts  endGame.ts  initConfig.ts  initGame.ts  joinGame.ts  startGame.ts  submitAnswers.ts  twizzin-be-2.ts  updateConfig.ts  updateGame.ts
twizzin-be-v2/: Anchor.toml
twizzin-be-v2/programs/twizzin-be-v2/: Cargo.toml
twizzin-be-v2/tests/: twizzin-be-v2.ts
twizzin-be-v2/tests/rust/: config.rs
twizzin-be-v2/tests/ts/: config.ts  helpers.ts
twizzin-be/programs/twizzin-be/: Cargo.toml
twizzin-be/programs/twizzin-be/src/: error.rs  errors.rs  lib.rs
twizzin-be/programs/twizzin-be/src/contexts/: add_player.rs  end_game.rs  init_config.rs  init_game.rs  mod.rs  update_game.rs  update_player.rs
twizzin-be/programs/twizzin-be/src/state/: game.rs  mod.rs
twizzin-be/programs/twizzin-be/src/utils/: calculate_payout.rs  find_winners.rs  hash.rs  hash_and_salt.rs  mod.rs
twizzin-be/tests/: addPlayer.ts  endGame.ts  errors.ts  initConfig.ts  initGame.ts  twizzin-be-tests.ts  twizzin-be.ts  updateGame.ts  updatePlayer.ts
twizzin-fe/: .eslintrc.json  next.config.mjs  package.json  tailwind.config.ts  todo.md
twizzin-fe/src/: i18n.ts
twizzin-fe/src/app/: _document.tsx  error.tsx  fonts.ts  globals.css  layout.tsx  page.tsx
twizzin-fe/src/components/: Alert.tsx  Button.tsx  (+16 more)
(+180 files in other folders)
